--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NTE1MTExODk0NjgwMzM4NDMz.DthZxg.kZ_gNW1rMAYweBGRbrR3x5u6a-8","client":"515111894680338433","tag":"!","case":"true","separator":"\\s+","ownerId":"424911655722549258"}
+{"token":"NTExMTk1OTI1MTU5NjA4MzMz.DtoXlw.ccfHK1SiZNv9hKHUgRwVzke5_7M","client":"511195925159608333","tag":"*","case":"true","separator":"\\s+","ownerId":"424911655722549258"}
